--- a/Draw/Dice/Controller/Settings/CustomDiceSettingCell.xib
+++ b/Draw/Dice/Controller/Settings/CustomDiceSettingCell.xib
@@ -32,30 +32,28 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="1073286054">
+			<object class="IBUITableViewCell" id="857974921">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="930270543">
-						<reference key="NSNextResponder" ref="1073286054"/>
+					<object class="IBUIView" id="579778745">
+						<reference key="NSNextResponder" ref="857974921"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="647880429">
-								<reference key="NSNextResponder" ref="930270543"/>
+							<object class="IBUIImageView" id="1012169978">
+								<reference key="NSNextResponder" ref="579778745"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 13}, {68, 76}}</string>
-								<reference key="NSSuperview" ref="930270543"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="579778745"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUILabel" id="974730">
-								<reference key="NSNextResponder" ref="930270543"/>
+							<object class="IBUILabel" id="690513797">
+								<reference key="NSNextResponder" ref="579778745"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{96, 13}, {62, 23}}</string>
-								<reference key="NSSuperview" ref="930270543"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="579778745"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -63,32 +61,31 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Label</string>
-								<object class="NSColor" key="IBUITextColor" id="111193820">
+								<object class="NSColor" key="IBUITextColor" id="345080680">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
-								<object class="NSColor" key="IBUIHighlightedColor" id="538943725">
+								<object class="NSColor" key="IBUIHighlightedColor" id="720150472">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="517746964">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="579320976">
 									<int key="type">1</int>
 									<double key="pointSize">17</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="906313624">
+								<object class="NSFont" key="IBUIFont" id="201609399">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="59432383">
-								<reference key="NSNextResponder" ref="930270543"/>
+							<object class="IBUILabel" id="740550126">
+								<reference key="NSNextResponder" ref="579778745"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{96, 44}, {99, 45}}</string>
-								<reference key="NSSuperview" ref="930270543"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="579778745"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -96,18 +93,17 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Label</string>
-								<reference key="IBUITextColor" ref="111193820"/>
-								<reference key="IBUIHighlightedColor" ref="538943725"/>
+								<reference key="IBUITextColor" ref="345080680"/>
+								<reference key="IBUIHighlightedColor" ref="720150472"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="517746964"/>
-								<reference key="IBUIFont" ref="906313624"/>
+								<reference key="IBUIFontDescription" ref="579320976"/>
+								<reference key="IBUIFont" ref="201609399"/>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 102}</string>
-						<reference key="NSSuperview" ref="1073286054"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="647880429"/>
+						<reference key="NSSuperview" ref="857974921"/>
+						<reference key="NSNextKeyView" ref="1012169978"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -122,11 +118,10 @@
 				</array>
 				<string key="NSFrameSize">{320, 103}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="930270543"/>
+				<reference key="NSNextKeyView" ref="579778745"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="930270543"/>
+				<reference key="IBUIContentView" ref="579778745"/>
 				<real value="103" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -135,24 +130,24 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">DiceImageView</string>
-						<reference key="source" ref="1073286054"/>
-						<reference key="destination" ref="647880429"/>
+						<reference key="source" ref="857974921"/>
+						<reference key="destination" ref="1012169978"/>
 					</object>
 					<int key="connectionID">7</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">DiceTitleLabel</string>
-						<reference key="source" ref="1073286054"/>
-						<reference key="destination" ref="974730"/>
+						<reference key="source" ref="857974921"/>
+						<reference key="destination" ref="690513797"/>
 					</object>
 					<int key="connectionID">8</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">DiceDescriptionLabel</string>
-						<reference key="source" ref="1073286054"/>
-						<reference key="destination" ref="59432383"/>
+						<reference key="source" ref="857974921"/>
+						<reference key="destination" ref="740550126"/>
 					</object>
 					<int key="connectionID">9</int>
 				</object>
@@ -178,28 +173,28 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="1073286054"/>
+						<reference key="object" ref="857974921"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="647880429"/>
-							<reference ref="974730"/>
-							<reference ref="59432383"/>
+							<reference ref="1012169978"/>
+							<reference ref="690513797"/>
+							<reference ref="740550126"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="647880429"/>
-						<reference key="parent" ref="1073286054"/>
+						<reference key="object" ref="1012169978"/>
+						<reference key="parent" ref="857974921"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="974730"/>
-						<reference key="parent" ref="1073286054"/>
+						<reference key="object" ref="690513797"/>
+						<reference key="parent" ref="857974921"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="59432383"/>
-						<reference key="parent" ref="1073286054"/>
+						<reference key="object" ref="740550126"/>
+						<reference key="parent" ref="857974921"/>
 					</object>
 				</array>
 			</object>
@@ -219,45 +214,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">9</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CustomDiceSettingCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="DiceDescriptionLabel">UILabel</string>
-						<string key="DiceImageView">UIImageView</string>
-						<string key="DiceTitleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="DiceDescriptionLabel">
-							<string key="name">DiceDescriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="DiceImageView">
-							<string key="name">DiceImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="DiceTitleLabel">
-							<string key="name">DiceTitleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CustomDiceSettingCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
